# ts-map

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  crud.py  graph.py  llm_client.py  main.py  models.py  schemas.py  templates.py
backend/app/brain/: __init__.py  api.py  crud.py  models.py  rule_engine.py  schemas.py  synthetic_data.py
backend/app/config_module/: __init__.py  api.py
backend/tests/: test_zhitu_optimization_api.py
docs/: 传神智谱-PRD.md  传神智谱-UIUX设计.md  传神智谱-详细设计.md
docs/传神智脑设计/: 传神智脑-Agent双模式PRD与详细设计-v0.3.docx  传神智脑-合同语义网络决策中枢设计.docx  传神智脑-合同语义网络决策平台PRD与详细设计-v0.2.docx
docs/传神智谱优化设计/: 传神智谱-本体开发平台优化PRD-v0.2.docx  传神智谱-本体开发平台详细设计-v0.2.docx  合同风控智谱手工测试脚本.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/brain/: AgentPanel.tsx  (+5 more)
scenarios/: battery-scheduling.yaml  contract-review.yaml  factoring-risk.yaml  import_yaml.py  reset_data.py
tools/: create_zhinao_design_doc.py  create_zhinao_v02_design_doc.py  create_zhinao_v03_agent_dual_mode_doc.py  create_zhitu_optimization_docs.py  seed_contract_risk_zhitu_demo.py
validation-suite/: README.md  check_api.py  check_env.py  check_graph.py  check_levels.py  check_ontology.py  config.py  requirements.txt  utils.py
验证数据集/: tool_backend_solved.py
验证数据集/本体验证文件包/: README.md  checks.py  checks_solved.py  ontology.yaml  queries.cypher  seed.cypher  seed.json  tool_backend.py  tools.json  参考答案说明.md  复现实战指南.md  故事脚本_Agent版.md  运行说明_Agent.md  验证数据集.xlsx
