[project]
name = "zhishen-ontology-backend"
version = "0.1.0"
description = "Transn Zhishen ontology management backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "neo4j>=6.0.3",
  "psycopg[binary]>=3.3.2",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "httpx2>=0.28.1",
  "pytest>=8.4.2",
  "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
